<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="354dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:paddingStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/corner_edittext"
            android:hint="@string/introduce_correo"
            android:inputType="textEmailAddress">

        </EditText>

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="10dp"
            android:background="@drawable/corner_edittext"
            android:hint="@string/introduce_pw"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/et_correo">

        </EditText>

        <EditText
            android:id="@+id/et_pw_repite"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="10dp"
            android:background="@drawable/corner_edittext"
            android:hint="@string/repite"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/et_pw">

        </EditText>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_button"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/registrar"
            android:textColorHint="@color/black">

        </Button>

        <TextView
            android:id="@+id/pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pregunta"
            android:textColorHint="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

        </TextView>

        <Button
            android:id="@+id/button_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/initRegistrar"
            android:textColorHint="@color/black"
            android:background="@drawable/corner_button">

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>