<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email: "
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/tv_correo_blank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Email Blank: "
                android:layout_marginStart="20dp"
                android:textAlignment="viewStart"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

        <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="15dp">

           <TextView
               android:id="@+id/tv_pw"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/contra"
               android:textSize="25sp"
               android:textStyle="bold">
           </TextView>

           <TextView
               android:id="@+id/tv_proveedor_blank"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/contrablank"
               android:layout_marginStart="20dp"
               android:textAlignment="viewStart"
               android:textSize="25sp"
               android:textStyle="bold">
           </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/color_button_logout"
            android:textColorHint="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/cerrarSesion"
            android:layout_marginTop="15dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>